cluster and version vars

--- a/heroku/citus/Dockerfile
+++ b/heroku/citus/Dockerfile
@@ -3,8 +3,10 @@ FROM untoreh/chisel-ubu
 RUN apt update && \
   curl https://install.citusdata.com/community/deb.sh | bash && \
   apt -y -q install postgresql-9.6-citus && \
-  echo "ver=$(ls /etc/postgresql/ | head -1)" >> /etc/.pg && \
-  echo "clu=$(ls /etc/postgresql/$ver/ | head -1)" >> /etc/.pg && \
+  export ver=$(ls /etc/postgresql/ | head -1) \
+  clu=$(ls /etc/postgresql/*/ | head -1) && \
+  echo "ver=$ver" >> /etc/.pg && \
+  echo "clu=$clu" >> /etc/.pg && \
   rm -rf /var/lib/postgresql /var/lib/apt/lists /etc/postgresql/*/*
 
 COPY pg_hba.conf /etc/pg_hba.conf
@@ -12,3 +14,4 @@ ADD create_ext.sh /usr/local/bin/
 ADD services.d /etc/services.d/
 
 CMD ["/init"]
+
