--- a/heroku/chisel-ubu/Dockerfile
+++ b/heroku/chisel-ubu/Dockerfile
@@ -12,6 +12,6 @@ RUN curl -sOL https://github.com/jpillora/chisel/releases/download/${CHISEL_VER}
 #  chown unpriv:dyno -hR $(ls -d /* | grep -Ev "dev|proc|sys")
 # USER unpriv 
 
-COPY ./services.d /etc/services.d
+ADD services.d /etc/services.d
 
 CMD ["/init"]
