--- a/heroku/haproxy/Dockerfile
+++ b/heroku/haproxy/Dockerfile
@@ -2,6 +2,6 @@ FROM untoreh/containers:chisel-alp
 
 RUN apk add --no-cache haproxy
 
-#ADD services.d /etc/services.d/
+ADD services.d /etc/services.d/
 
 CMD ["/init"]
