fixed qbittorrent services

--- a/heroku/qbittorrent/Dockerfile
+++ b/heroku/qbittorrent/Dockerfile
@@ -2,6 +2,7 @@ FROM untoreh/chisel-alp
 
 # Install required packages
 RUN apk add --no-cache \
+	openssh-client \
 	vde2 \
 	syncthing-inotify \
 	syncthing-utils \
