openshift fix permissions try

--- a/openshift/alpbase/Dockerfile
+++ b/openshift/alpbase/Dockerfile
@@ -15,13 +15,14 @@ RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/reposit
   rm -rf /tmp/* && \
   wget -q -O /etc/apk/keys/sgerrand.rsa.pub https://raw.githubusercontent.com/sgerrand/alpine-pkg-glibc/master/sgerrand.rsa.pub && \
   wget https://github.com/sgerrand/alpine-pkg-glibc/releases/download/${LIBC}/glibc-${LIBC}.apk && \
-  apk add glibc-${LIBC}.apk && rm -f glibc-${LIBC}.apk
+  apk add glibc-${LIBC}.apk && rm -f glibc-${LIBC}.apk && \
+  mkdir -p /var/run /sys /proc /dev
   
 COPY s6-hiercopy /bin/s6-hiercopy
 COPY services.d /etc/services.d
 COPY cont-init.d /etc/cont-init.d
 
 RUN chmod g=u -R $(ls -d /* | grep -Ev "dev|proc|sys") && \
-  chmod g=u /dev /proc
+  chmod g=u /dev /proc &>/dev/null
  
 CMD ["/init"]
