--- a/heroku/alpbase/Dockerfile
+++ b/heroku/alpbase/Dockerfile
@@ -4,7 +4,7 @@ ENV S6v=v1.19.1.1
 
 RUN echo "http://dl-cdn.alpinelinux.org/alpine/edge/testing" >> /etc/apk/repositories && \
   apk upgrade --no-cache && \
-  apk add --no-cache libressl ca-certificates curl coreutils bash s6-rc s6-linux-utils s6-portable-utils dropbear &fakeroot & \
+  apk add --no-cache libressl ca-certificates curl coreutils bash s6-rc s6-linux-utils s6-portable-utils dropbear fakeroot && \
   mkdir -p /etc/dropbear && \
   mv /usr/bin/s6-* /bin/ && \
   curl -sOL https://github.com/just-containers/s6-overlay/releases/download/${S6v}/s6-overlay-amd64.tar.gz && \
